# tree-sitter-lilypond-scheme

./: Cargo.toml  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  rules.js  setup.py  tree-sitter.json  update_builtins.py
.github/workflows/: ci.yml
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lilypond_scheme/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterLilypondSchemeTests/: TreeSitterLilypondSchemeTests.swift
queries/: highlights-builtins.scm  highlights-lilypond-builtins.scm  highlights.scm  injections.scm  update_builtins.py
src/: grammar.json  node-types.json  parser.c
test/corpus/: Literals.txt  Numbers.txt
